stubs/devops/root/k8s/resources/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: databases
